--- a/src/index.css
+++ b/src/index.css
@@ -7,32 +7,41 @@ body{
     font-family: Georgia, 'Times New Roman', Times, serif;
     background: #f1f5f8;
 }
-.bookList{
+.booklist {
     width: 90vw;
     max-width: 1170px;
     margin: 5rem auto;
     display: grid;
-    gap:2rem;
-}
-
-@media screen and (min-width: 768px) {
-    .bookList{
-        grid-template-columns: repeat(3,1fr);
+    gap: 2rem;
+  }
+  
+  @media screen and (min-width: 768px) {
+    .booklist {
+      grid-template-columns: repeat(3, 1fr);
+      align-items: start;
     }
-}
-
-.book img{
-    width:100%;
-    object-fit: cover;
-}
-.book{
+  }
+  .book {
     background: #fff;
     border-radius: 1rem;
     padding: 2rem;
     text-align: center;
-}
-
-.book h2{
-    margin-top:1rem;
+  }
+  .book img {
+    width: 50%;
+    object-fit: cover;
+  }
+  .book h2 {
+    margin-top: 1rem;
     font-size: 1rem;
-}
+  }
+  .book h4 {
+    color: #617d98;
+    font-size: 0.75rem;
+    margin-top: 0.5rem;
+    letter-spacing: 2px;
+  }
+  .book p{
+    margin-top: 1rem;
+
+  }
